# Heart-Attack-Risk-Prediction

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_app.ps1
retina_risk/: auth.py  main.py  model.py  train.py  utils.py
